# dummy_db_writer

./: Dockerfile  README.md  pyproject.toml
src/: app.py
