[tool.poetry]
name = "dummy-db-writer"
version = "0.1.0"
description = "Populate your DB with dummy data easily"
authors = ["Jorge Alves"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/"}]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^15.0.0"
click = "^8.1.3"
PyMySQL = "^1.0.2"
PyPika = "^0.48.9"

[tool.poetry.group.dev.dependencies]
pytest-faker = "^2.0.0"
pytest = "^7.1.3"
pytest-click = "^1.1.0"
black = "^22.8.0"
pytest-black-multipy = "^1.0.1"
pytest-black = "^0.3.12"
flake8 = "^5.0.4"
pytest-flake8 = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
writer = 'src.app:dummy_writer'
